--- a/explainer.html
+++ b/explainer.html
@@ -207,10 +207,10 @@ All members have made an equal amount of contribution to the report. The table b
     <td class="tg-xocx"></td>
   </tr>
   <tr>
-    <td class="tg-us36"></td>
-    <td class="tg-4a1m">Bubble chart</td>
-    <td class="tg-uys7"></td>
-    <td class="tg-uys7"></td>
+  <td class="tg-oexo"></td>
+    <td class="tg-oexo">Bubble chart</td>
+    <td class="tg-xocx"></td>
+    <td class="tg-xocx"></td>
     <td class="tg-xocx">x</td>
   </tr>
   <tr>
