Link to public github page

--- a/index.html
+++ b/index.html
@@ -60,11 +60,14 @@
     <div class="col-8">
       <div class="row">
         <h1 class="col-9 header">An insight into accidents in New York</h1>
-        <div class="col-3">
-            <div class="justify-content-center text-center explainer-content">
+        <div class="col-3 justify-content-center">
+            <div class="text-right">
+              <a style="padding: .375rem .75rem;" href="https://github.com/SilasPihl/Social_data_website/" target="_blank">Public Github Repo</a>
+            </div>
+            <div class="text-right explainer-content">
               <button class="btn btn-link" type="button" onclick="showHide('main-d3-content', 'block'); showHide('explainer-content', 'none');" >Show Main Project Page</button>
             </div>
-            <div class="justify-content-center text-center main-d3-content">
+            <div class="text-right main-d3-content">
               <button class="btn btn-link"   type="button" onclick="showHide('main-d3-content', 'none'); showHide('explainer-content', 'block');">Show Explainer book</button>
             </div>
         </div>
