--- a/index.html
+++ b/index.html
@@ -185,10 +185,9 @@
               </div>  -->
             </div> 
 
-
           </div>
           <div class="col-2">
-            <div class="right-skip" >
+            <div class="right-skip">
               <div class="btn-group btn-group-vertical">
                 <button type="button" data-toggle="button" 
                         class="rounded btn-outline-primary btn"
@@ -207,7 +206,8 @@
         <div class="step" >
           <h1>Intro</h1>
           <p>
-             Fell free to change the graphs at any time. Brush any area and see the changes. When you scroll down a new information box will appear. Go ahead.
+             Fell free to change the graphs at any time. Brush any area and see the changes. If you change zoom in the page then reload page.
+             When you scroll down a new information box will appear. Go ahead.
           </p>
 
         </div>
