References added, changed animation, added picture

--- a/explainer.html
+++ b/explainer.html
@@ -79,8 +79,8 @@ We use Filtering, Selection and Search in allowing the user to choose which part
 <p>
 Finally, we have made use of an Introductory Text and visualization in our slider and Annotations for the interactive part of our visualization.
 </p>
-
-
+  If you are interested in first part of this final project, making a 3 min video of the expectations (Project A), can be seen here 
+  <a href="https://app.peergrade.io/handin/download/5ad394d80c701000120cacda">Youtube link</a>.
   </li>  
     
 </ul>
@@ -146,9 +146,29 @@ In a real life commercial article with visualizations we would use canvas for pa
 </figure>
 
 </div>
-
-
     
+  </li>
+</ul>
+
+<h2>References</h2>
+<ul>
+  <li>
+D3: <a href="https://d3js.org/" target="_blank">https://d3js.org/</a>    
+  </li>  
+  <li>
+Project description: <a href="https://github.com/suneman/socialdataanalysis2018/wiki/Final-Project" target="_blank">https://github.com/suneman/socialdataanalysis2018/wiki/Final-Project</a>    
+  </li>  
+  <li>
+Data: <a href="https://nycdatascience.com/blog/student-works/r-visualization/interactive-visualizations-nyc-traffic-accidents-r-shiny/" target="_blank">https://nycdatascience.com/blog/student-works/r-visualization/interactive-visualizations-nyc-traffic-accidents-r-shiny/</a>    
+  </li>
+  <li>
+Rend HTML5 Canvas with SVG: <a href="https://engineering.mongodb.com/post/d3-round-two-how-to-blend-html5-canvas-with-svg-to-speed-up-rendering" target="_blank">https://engineering.mongodb.com/post/d3-round-two-how-to-blend-html5-canvas-with-svg-to-speed-up-rendering</a>     
+  </li>
+  <li>
+D3 Graph scroll (left pane): <a href="http://1wheel.github.io/graph-scroll/" target="_blank">http://1wheel.github.io/graph-scroll/</a>    
+  </li>
+  <li>
+D3 Simple slider: <a href="https://bl.ocks.org/johnwalley/e1d256b81e51da68f7feb632a53c3518" target="_blank">https://bl.ocks.org/johnwalley/e1d256b81e51da68f7feb632a53c3518</a>    
   </li>
 </ul>
 
@@ -158,11 +178,11 @@ All members have made an equal amount of contribution to the report. The table b
 </p>
 <table class="tg">
   <tr>
-    <th class="tg-v0l1"><br/>  <br/>  </th>
+    <th class="tg-oexo"><br/>  <br/>  </th>
     <th class="tg-oexo"></th>
-    <th class="tg-hyn2"><br/>Alexander  </th>
-    <th class="tg-hyn2"><br/>Anders  </th>
-    <th class="tg-hyn2"><br/>Silas  </th>
+    <th class="tg-oexo"><br/>Alexander  </th>
+    <th class="tg-oexo"><br/>Anders  </th>
+    <th class="tg-oexo"><br/>Silas  </th>
   </tr>
   <tr>
     <td class="tg-oexo">Data story page</td>
