--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
-    <title>Project B- 02806 F18 at DTU</title>
+    <title>Project B - 02806 F18 at DTU</title>
     <meta charset="utf-8" />
     <script src="js/d3.v4.min.js"></script>
     <script src="js/lodash.min.js"></script>
@@ -82,15 +82,22 @@
       </div>
 
       <div class="main-d3-content" >
-        
         <p>
           New York City has been scored to be the third most congested city in the world by <a href="http://inrix.com/scorecard/">Inrix</a>. In fact it has become so bad that a new initiative, <a href="http://www1.nyc.gov/site/visionzero/index.page">Vision Zero</a>, was launched in 2014, with a goal of reducing annual traffic deaths by 50% by the year 2025. It has succeeded in reducing the total number of people killed anually in traffic. It is still not completely safe to be in traffic in New York. 
         </p>
         <p>
           But which areas are the most dangerous? And since it is so congested where are you most likely to have your new car dented?
         </p>
+        <div class="text-center" >
+  
+          <figure class="figure rounded" >
+            <img class="rounded" src="images/newyork.png" alt="newyork.png" style="width:100%;"/>
+            <figcaption class="figure-caption text-right">Image from <a href="https://www.publicdomainpictures.net/en/view-image.php?image=193320&picture=time-square-new-york" target="_blank">Publicdomainpictures.net</a></figcaption>
+          </figure>
+
+        </div>        
         <p>
-          The data set from <a href="https://data.cityofnewyork.us/Public-Safety/NYPD-Complaint-Data-Historic/qgea-i56i">OpenNYC</a> has been used. It has been filtered to only include the years 2017 and 2018, and only include data that has correctly been designated a borough, meaning any data with a miss match of borough ID and latitude longitude location has been removed. The miss matched data accounts for roughly 33% of the original dataset, including the removal of data without a designated borough. To make the visualizations run a lot smoother we have elected to only use every 30th data point. Even though this will make the data less precise, our objective is to give an overview of the data and focus on the narrative, and we feel this will be better shown with less cluttered data.
+          The data set from <a href="https://data.cityofnewyork.us/Public-Safety/NYPD-Complaint-Data-Historic/qgea-i56i">OpenNYC</a> has been used. It has been filtered to only include the years 2017 and 2018, and only include data that has correctly been designated a borough, meaning any data with a mismatch of borough ID and latitude longitude location has been removed. The inconsistent data accounts for roughly 33% of the original data set, including the removal of data without a designated borough. To make the visualizations run a lot smoother we have elected to only use every 30th data point. Even though this will make the data less precise, our objective is to give an overview of the data and focus on the narrative, and we feel this will be better shown with less cluttered data.
         </p>
         <div class="justify-content-center text-center">
           <svg id="d3_bubbles" font-family="sans-serif" font-size="10" text-anchor="middle"></svg>
@@ -257,7 +264,13 @@
           <button id="animateButtons_2_btn"class="btn btn-outline-primary" onclick="animateButtons_2();">See animation!</button>
         </div>
 
-        <div class="step"></div>
+        <div class="step">
+          <h1>Reset</h1>
+          <p>
+            You can reset the brushes and borough buttons independently. Click outside the brush to reset only that. 
+            If you have messed up the brushes and buttons and want to reset everything then click the "Reset all" button.  
+          </p>
+        </div>
 
       </div>    <!-- end of steps -->
     </div><!-- end of fixedcontainer -->
@@ -266,9 +279,7 @@
     <div class="row" style="margin-left:20px">
       <div class="col-2"></div>
       <div class="col-8">
-        
-      The above was our visualization showcasing traffic accidents in New York. We hope that it has been interesting and we hope you will drive safely, remaining aware of your surroundings.
-
+      The above is our visualization showcasing traffic accidents in New York. We hope that it has been interesting and we hope you will drive safely, remaining aware of your surroundings. Please read the explainer book for more information. 
       </div>  <!-- end of title, middle column -->
       <div class="col-2"></div>
     </div>
