--- a/explainer.html
+++ b/explainer.html
@@ -170,6 +170,15 @@ D3 Graph scroll (left pane): <a href="http://1wheel.github.io/graph-scroll/" tar
   <li>
 D3 Simple slider: <a href="https://bl.ocks.org/johnwalley/e1d256b81e51da68f7feb632a53c3518" target="_blank">https://bl.ocks.org/johnwalley/e1d256b81e51da68f7feb632a53c3518</a>    
   </li>
+  <li>
+Edward Segel and Jeffrey Heer, "Narrative Visualization: Telling Stories with Data".   
+  </li>
+  <li>
+Philipp K. Janert, "Data Analysis - with open source tools"    
+  </li>
+  <li>
+Scott Murray, "Interactive Data Visualizations - for the web"
+  </li>
 </ul>
 
 <h2>Contributions</h2>
