--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
                       Staten Island</button>
                       
                     </div>
+                  </div>                    
                 </div>      
               </div> <!-- end of 7-5 row -->
 
@@ -222,7 +223,7 @@
         <div class="step" >
           <h1>Animations</h1>
           <p>
-            Many of these information boxes will can activate an animation in the charts. You can click the information button to activate it or you can activate automatic animation on scroll by clicking the button in the right pane "Animate on scroll".   
+            Many of these information boxes can activate an animation in the charts. You can click the information button to activate it or you can activate automatic animation on scroll by clicking the button in the right pane "Animate on scroll".   
           </p>
 
         </div>
