KÆMPE ændring. Canvas og lasso implementeret.

--- a/explainer.html
+++ b/explainer.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <!-- Please structure it into the following sections -->
+  <!-- <div id="d3_canvas" style="width:400px"></div> -->
 
 <h2>Motivation</h2>
 <ul>
@@ -164,6 +165,12 @@ Data: <a href="https://nycdatascience.com/blog/student-works/r-visualization/int
   <li>
 Rend HTML5 Canvas with SVG: <a href="https://engineering.mongodb.com/post/d3-round-two-how-to-blend-html5-canvas-with-svg-to-speed-up-rendering" target="_blank">https://engineering.mongodb.com/post/d3-round-two-how-to-blend-html5-canvas-with-svg-to-speed-up-rendering</a>     
   </li>
+<li>
+SVG vs Canvas D3: <a href="https://bl.ocks.org/john-guerra/e80f02e59681ace122626c39407526a0" target="_blank">https://bl.ocks.org/john-guerra/e80f02e59681ace122626c39407526a0</a>
+</li>
+<li>
+Lasso with d3 v4 and Canvas: <a href="https://bl.ocks.org/pbeshai/8008075f9ce771ee8be39e8c38907570" target="_blank">https://bl.ocks.org/pbeshai/8008075f9ce771ee8be39e8c38907570</a>
+</li>
   <li>
 D3 Graph scroll (left pane): <a href="http://1wheel.github.io/graph-scroll/" target="_blank">http://1wheel.github.io/graph-scroll/</a>    
   </li>
