--- a/index.html
+++ b/index.html
@@ -193,11 +193,18 @@
                       Staten Island</button>
                       
                     </div>
+
                     <button type="button" 
                       class="btn-outline-primary btn"
                       id="tryCanvas"
                       style="margin-top: 10px"
                       onclick="toggleCanvas();">Try map with Canvas</button>
+                      <br/>
+                    <button type="button" 
+                      class="btn-outline-primary btn"
+                      id="reloadInteractive"
+                      style="margin-top: 10px"
+                      onclick="reloadInteractiveD3();">Reload charts</button>
                 </div>      
               </div> <!-- end of 7-5 row -->
 
@@ -228,7 +235,7 @@
         <div class="step" >
           <h1>Intro</h1>
           <p>
-             Fell free to change the graphs at any time. Brush any area and see the changes. If you change zoom in the page then reload page.
+             Fell free to change the graphs at any time. Brush any area and see the changes. If you change zoom in the page then reload page or just click the "Reload charts" button.
              When you scroll down a new information box will appear. Go ahead.
           </p>
 
