When changed screen size :)

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         <div class="step" >
           <h1>Intro</h1>
           <p>
-             Fell free to change the graphs at any time. Brush any area and see the changes. If you change zoom in the page then reload page or just click the "Reload charts" button.
+             Fell free to change the graphs at any time. Brush any area and see the changes. If you change zoom in the page then you will be asked to reload the page for better experience.<br/>
              When you scroll down a new information box will appear. Go ahead.
           </p>
 
