--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <link  href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="style/main.css">
 
+    <!-- <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> -->
+    <link rel="icon" href="images/favicon.png" type="image/png">
+    <link rel="icon" href="images/favicon-16.png" type="image/png">
+    <link rel="icon" href="images/favicon-32.png" type="image/png">
+
     <script type="text/javascript">
       function showHide(className, displayState) {
         var elements = document.getElementsByClassName(className);
