--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Project B - 02806 F18 at DTU</title>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="js/d3.v4.min.js"></script>
     <script src="js/lodash.min.js"></script>
     <script src="js/graph-scroll.js"></script>
@@ -63,9 +64,6 @@
     </script>
 </head>
 <body>
-<!--     <div id="d3_canvas_container" style="width:400px">
-      
-    </div> -->
   <div class="row" style="margin-left:20px">
     <div class="col-2"></div>
     <div class="col-8">
@@ -114,7 +112,7 @@
           <svg id="d3_bubbles" font-family="sans-serif" font-size="10" text-anchor="middle"></svg>
         </div>
         <p>
-          The above buble chart shows the most common contributing factos for car accidents. The top 5 contributing factors are making up 69.1% of the accidents, and they are factors which could be easily be remedied by drivers being more attentive or more patient. Driver inattention - don’t do other things while driving. Following too closely - use the two second rule. Failure to Yield Right-of-Way - have patience. Passing or Lane Usage Improper - remember to only pass on the left, even if the car infront is slow. Backing unsafely - remember to look around and back out slowly. This sort of knowledge could be very useful when targeting methods for a safer traffic, as seen in New York’s current traffic initiative ‘Vision Zero’.
+          The above buble chart shows the most common contributing factos for car accidents. The top 5 contributing factors are making up 69.1% of the accidents, and they are factors which could easily be remedied by drivers being more attentive or more patient. Driver inattention - don’t do other things while driving. Following too closely - use the two second rule. Failure to Yield Right-of-Way - have patience. Passing or Lane Usage Improper - remember to only pass on the left, even if the car infront is slow. Backing unsafely - remember to look around and back out slowly. This sort of knowledge could be very useful when targeting methods for a safer traffic, as seen in New York’s current traffic initiative ‘Vision Zero’.
         </p>
         <p>
         </p>
@@ -141,7 +139,7 @@
                   <h5>Timeseries of accidents</h5>
                   <div class="row justify-content-md-center pt-1" >
                     <div class="col" style="text-align:right">
-                      Avg. over no. of days<br/>
+                      Avg. accidents [days]<br/>
                     </div>
                     <!-- <div> -->
                       <div class="col" id="line_svg_slider"></div>
@@ -214,6 +212,7 @@
               </div> <!-- end of 7-5 row -->
 
               <hr class="line" />
+              The above is our visualization showcasing traffic accidents in New York. We hope that it has been interesting and we hope you will drive safely, remaining aware of your surroundings. Please read the explainer book for more information.
               <!-- <div>
                 Data from: <a href="https://data.cityofnewyork.us/Public-Safety/NYPD-Complaint-Data-Historic/qgea-i56i">https://data.cityofnewyork.us/Public-Safety/NYPD-Complaint-Data-Historic/qgea-i56i</a>
               </div>  -->
@@ -236,22 +235,25 @@
         </div>
       </div>    <!-- end of fixedarea -->  
       <div id="steps" class="text-center">
-        <div class="step"></div>
+        <div class="step">
+          <h1 style="text-align:center">Scroll down to read</h1>
+          <br/><img class="down-arrow" src="images/down.png" alt="down.png" />
+        </div>
         <div class="step" >
           <h1>Intro</h1>
           <p>
              Fell free to change the graphs at any time. Brush any area and see the changes. If you change zoom in the page then you will be asked to reload the page for better experience.<br/>
-             When you scroll down a new information box will appear. Go ahead.
+             When you scroll down a new sliding text box will appear. Go ahead.
           </p>
-
+          <br/><img class="down-arrow" src="images/down.png" alt="down.png" />
         </div>
 
         <div class="step" >
           <h1>Animations</h1>
           <p>
-            Many of these information boxes can activate an animation in the charts. You can click the information button to activate it or you can activate automatic animation on scroll by clicking the button in the right pane "Animate on scroll".   
+            Many of these information boxes can activate an animation in the charts. A button will appear in the sliding text box if it has an animation attached. Click it or a activate automatic animation on scroll by clicking the button in the right pane "Animate on scroll".
           </p>
-
+          <br/><img class="down-arrow" src="images/down.png" alt="down.png" />
         </div>
 
         <div class="step" >
@@ -259,7 +261,8 @@
           <p>
             The southeastern part of Queens, which seems free from accidents, is bare because of JFK International Airport.
           </p>
-          <button id="animateAirPort_btn" class="btn btn-outline-primary" onclick="animateAirPort();">See animation!</button>
+          <button id="animateAirPort_btn" class="ani-btn btn btn-outline-primary" onclick="animateAirPort();">See animation!</button>
+          <br/><br/><img class="down-arrow" src="images/down.png" alt="down.png" />
 
         </div>
         <div class="step ">
@@ -267,28 +270,36 @@
           <p>
             The northwestern part of Staten Island is not completely free of accidents. However, due to our filtering of only using data which has a designated borough, this part is removed. This seems to indicate a systematic error in inputting data.
           </p>
-          <button id="animateStatenIsland_btn" class="btn btn-outline-primary" onclick="animateStatenIsland();">See animation!</button>
+          <button id="animateStatenIsland_btn" class="ani-btn btn btn-outline-primary" onclick="animateStatenIsland();">See animation!</button>
+          <br/><br/><img class="down-arrow" src="images/down.png" alt="down.png" />
+
         </div>
         <div class="step ">
           <h1>Rush hours</h1>
           <p>
             Across the dataset we see peak accident hours are 14:00-15:00 and 16:00-18:00. This must mean that rush hour, when people are travelling home from work, is the most dangerous.
           </p>
-          <button id="animateBarChart1418_btn" class="btn btn-outline-primary" onclick="animateBarChart1418();">See animation!</button>
+          <button id="animateBarChart1418_btn" class="ani-btn btn btn-outline-primary" onclick="animateBarChart1418();">See animation!</button>
+          <br/><br/><img class="down-arrow" src="images/down.png" alt="down.png" />
+
         </div>
         <div class="step">
           <h1>Correlation across data set</h1>
           <p>
             We looked for a correlation between population density and the amount of accidents per inhabitant. Following this hypothesis we thought Manhattan would be the most dangerous. See next..
           </p>
-          <button id="animateButtons_1_btn"class="btn btn-outline-primary" onclick="animateButtons_1();">See animation!</button>
+          <button id="animateButtons_1_btn"class="ani-btn btn btn-outline-primary" onclick="animateButtons_1();">See animation!</button>
+          <br/><br/><img class="down-arrow" src="images/down.png" alt="down.png" />
+
         </div>
         <div class="step">
           <h1>Correlation across data set</h1>
           <p>
             But we were unable to find any correlation. On the contrary, Queens with the second lowest density was the most dangerous and the Bronx, with the second highest density, was the least dangerous.
           </p>
-          <button id="animateButtons_2_btn"class="btn btn-outline-primary" onclick="animateButtons_2();">See animation!</button>
+          <button id="animateButtons_2_btn"class="ani-btn btn btn-outline-primary" onclick="animateButtons_2();">See animation!</button>
+          <br/><br/><img class="down-arrow"  src="images/down.png" alt="down.png" />
+
         </div>
 
         <div class="step">
@@ -296,6 +307,8 @@
           <p>
             Try changing the map brush by clicking the button just above the map. You can use a lasso or the normal brush.
           </p>
+          <br/> <br/><img class="down-arrow" src="images/down.png" alt="down.png" />
+
         </div>
 
         <div class="step">
@@ -303,27 +316,26 @@
           <p>
             You can change the fell an view of the map by trying out the canvas mode. Try click the button under the map. 
           </p>
+          <br/><br/><img class="down-arrow" src="images/down.png" alt="down.png" />
+
         </div>
 
-        <div class="step">
+        <div class="step" >
           <h1>Reset</h1>
           <p>
             You can reset the brushes and borough buttons independently. Click outside the brush to reset only that. 
             If you have messed up the brushes and buttons and want to reset everything then click the "Reset all" button.  
           </p>
+          <p>This was the last sliding text box - enjoy the visualizations!</p>
+          <img src="images/smiley.jpeg" alt="smiley.jpeg" style="width:20%;"/>
+          
+
         </div>
+        <div class="step" style="margin-bottom: 0px; min-height:0px;height:20px;"></div>
+
 
       </div>    <!-- end of steps -->
     </div><!-- end of fixedcontainer -->
-
-
-    <div class="row" style="margin-left:20px">
-      <div class="col-2"></div>
-      <div class="col-8">
-      The above is our visualization showcasing traffic accidents in New York. We hope that it has been interesting and we hope you will drive safely, remaining aware of your surroundings. Please read the explainer book for more information. 
-      </div>  <!-- end of title, middle column -->
-      <div class="col-2"></div>
-    </div>
 
   </div> <!-- end of main-d3-content -->
 
