A little padding before deadline

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       </div>    <!-- end of fixedarea -->  
       <div id="steps" class="text-center">
         <div class="step">
-          <h1 style="text-align:center">Scroll down to read</h1>
+          <h1 style="text-align:center;padding-top:20px;">Scroll down to read</h1>
           <br/><img class="down-arrow" src="images/down.png" alt="down.png" />
         </div>
         <div class="step" >
